TRAC-6085 fixed button alignment issue

--- a/src/app/components/views/composer/composer.component.scss
+++ b/src/app/components/views/composer/composer.component.scss
@@ -290,7 +290,7 @@ mat-list-item {
     flex-direction: row;
     position: absolute;
     justify-content: end;
-    top: calc(97vh - 111px);
+    top: calc(96vh - 117px);
     right: 34px;
     margin-left: 5px;
     overflow-y: auto;
